conf: Add db, redis prop in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=shortping
+server.servlet.context-path=/shortping
+
+db.datasource.schema=shortping
+db.datasource.driver-class-name=org.postgresql.Driver
+db.datasource.jdbc-url=jdbc:postgresql://localhost:5433/projects
+db.datasource.username=postgres
+db.datasource.password=password
+db.datasource.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
