conf: 버전호환 및 도커파일 수정

--- a/shortping-front/tsconfig.node.json
+++ b/shortping-front/tsconfig.node.json
@@ -18,14 +18,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "src/**/*",
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.svg",
-    "./types",
-    "public/assets/*",
-    "node_modules/@types/node/globals.d.ts",
-    "**/.env",
-  ]
+  "include": ["vite.config.ts"]
 }
