--- a/shortping-front/package.json
+++ b/shortping-front/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
