conf: 어플리케이션 기본 포트 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=shortping
 server.servlet.context-path=/shortping
+server.port=8084
 
 db.datasource.schema=shortping
 db.datasource.driver-class-name=org.postgresql.Driver
